[package]
name = "beeline-rust"
version = "0.1.0"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2018"
description = "Rust library to aid in adding instrumentation to Rust apps using Honeycomb"
documentation = "https://docs.rs/beeline-rust/0.1.0/beeline"
repository = "https://github.com/nlopes/beeline-rust.git"
license = "MIT"
readme = "README.md"
keywords = ["web", "honeycomb", "api"]
categories = ["network-programming", "asynchronous", "api-bindings", "web-programming"]
exclude = [".gitignore", ".travis.yml"]

[badges]
travis-ci = { repository = "nlopes/beeline-rust", branch = "master" }

[lib]
name = "beeline"
path = "src/lib.rs"

[workspace]
members = [
  ".",
  "beeline-actix-web",
  "beeline-rocket",
]

[dependencies]
base64 = "=0.10.1"
hostname = "=0.1.5"
libhoney-rust = "=0.1.2"
log = "=0.4.8"
parking_lot = { version = "=0.9" }
serde_json = "=1.0.40"
uuid = { version = "=0.7.4", features = ["v4"]}

[dev-dependencies]
mockito = "=0.20.0"
