[package]
name = "beeline-rust"
version = "0.1.0"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2018"
description = "Rust library to aid in adding instrumentation to Rust apps using Honeycomb"
documentation = "https://docs.rs/beeline-rust/0.1.0/beeline"
repository = "https://github.com/nlopes/beeline-rust.git"
license = "MIT"
readme = "README.md"
keywords = ["web", "honeycomb", "api"]
categories = ["network-programming", "asynchronous", "api-bindings", "web-programming"]
exclude = [".gitignore", ".travis.yml"]

[badges]
travis-ci = { repository = "nlopes/beeline-rust", branch = "master" }

[lib]
name = "beeline"
path = "src/lib.rs"

[workspace]
members = [
  ".",
  "beeline-actix-web",
  "beeline-rocket",
]

[features]
default = ["async_std_executor"]
async_std_executor = ["async_executors/async_std"]
tokio_executor = ["async_executors/tokio"]

[dependencies]
async_executors = { version = "=0.4", default-features = false }
base64 = "=0.13"
hostname = "=0.3"
futures = "=0.3"
libhoney-rust = { path = "../libhoney-rust" }
log = "=0.4"
parking_lot = "=0.11"
serde_json = "=1.0.64"
thiserror = "=1.0.22"
uuid = { version = "=0.8", features = ["v4"]}

[dev-dependencies]
mockito = "=0.29"
actix-rt = "=2.2"