[package]
name = "beeline-actix-web"
version = "0.1.0"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2018"
description = "Actix-web middleware to send metrics to Honeycomb"
documentation = "https://docs.rs/beeline/0.1.0/beeline-actix-web"
repository = "https://github.com/nlopes/beeline-rust.git"
keywords = ["actix", "actix-web", "middleware", "honeycomb", "web"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore", ".travis.yml"]
workspace = ".."

[lib]
name = "beeline_actix_web"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "nlopes/beeline-rust", branch = "master" }

[dependencies]
actix-service = "=1.0.6"
actix-web = "=3.2.0"
beeline-rust = { path = "../" }
futures = "=0.3.7"
parking_lot = "0.11.0"
pin-project = "1"
serde_json = "=1.0.64"

[dev-dependencies]
hostname = "=0.3.1"
libhoney-rust = { path = "../../libhoney-rust" }
mockito = "=0.29.0"
