[package]
name = "beeline-rocket"
version = "0.1.0"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2018"
description = "Rocket middleware to send metrics to Honeycomb"
documentation = "https://docs.rs/beeline/0.1.0/beeline-rocket"
repository = "https://github.com/nlopes/beeline-rust.git"
keywords = ["rocket", "middleware", "honeycomb", "web"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore", ".travis.yml"]
workspace = ".."

[lib]
name = "beeline_rocket"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "nlopes/beeline-rust", branch = "master" }

[dependencies]
rocket = "=0.4.5"
beeline-rust = { path = "../" }
serde_json = "=1.0.64"

[dev-dependencies]
hostname = "=0.3.1"
libhoney-rust = { path = "../../libhoney-rust" }
mockito = "=0.29.0"
